Page MenuHome GnuPG

gpg-wks-client should support --check
Closed, ResolvedPublic

Description

Usecase:
In GpgOL I want to find out additionally to supported if a key was already
published in the Web key directory of that service. So that if it's supported
but not published I can offer that to users with secret keys for that service.

This could be done with gpg --auto-key-locate clear,nodefault,wkd but that is
not nice to use thorugh gpgme.

On Jabber we talked about using gpg-wks-client for this instead of gpgme.

It would be good if --check and --supported would also get clearly defined error
output so that this command (and supported) could be used through gpgme_spawn.

E.g the return code separated by a semicolon at the end of the output:

gpg-wks-client --check bar@bar.baz
stderr: no key found;1
gpg-wks-client --check foo@bar.baz
stderr: key found;0

Event Timeline

Okay, try "gpg-wks-cleint --check ADDR" So see details use -v.

Regarding a return code as text lines: Do you need this due to the double-fork
we use in gpgme? If we provide this we should resort to the GnuPG standard which is
to required --status-fd N to print
[GNUPG:] ERROR ....
okay?

Regarding a return code as text lines: Do you need this due to the double-fork
we use in gpgme?

I think so, at least I did not find a way to return an exit code from
gpgme_op_spawn.

If we provide this we should resort to the GnuPG standard
which is to required --status-fd N to print
[GNUPG:] ERROR ....
okay?

Yes. In that case i could use op_spawn with status-fd 2 and would get the error
I think.

Okay, I implemented --status-fd for gpg-wks-client.

werner removed a project: Restricted Project.